# panda-coach

./: .gitignore  .gitmodules  SKILL.md
charts/: generate-chart.js  import_11.js  package-lock.json  package.json
references/playbook/: mental-models.md  scenarios.md  trade-flow.md  voice-dna.md
references/research/: 01-writings.md  02-conversations.md  03-expression-dna.md  05-decisions.md  README.md
scripts/: README.md
scripts/backtest/: README.md  backtest.py  batch.py  diagnose.py  fetch_data.py  indicators.py  key_levels.py  pyproject.toml  report.py  run.py  strategy_v32.py  trend.py
scripts/backtest/reports/: BTC-USDT-SWAP_summary.md  BTC-USDT-SWAP_trades.csv  batch_bear.md  batch_costs.md  batch_multi.md  batch_sweep.md
trading-system/: system_v1.md  system_v2.md  system_v3.md  trade_log.md  trade_log_template.md
