[project]
name = "panda-backtest"
version = "0.1.0"
description = "Backtest engine for Panda Coach trading system V3.2"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

# 仅作脚本运行，不构建为可分发包
[tool.setuptools]
py-modules = []
